--- a/lewis_chris_profile.html
+++ b/lewis_chris_profile.html
@@ -42,10 +42,10 @@
 </head>
 <body>
     <div class="card">
-        <img src="profile-42914__340.webp" alt="Chris" style="width:100%">
+        <img src="chris-portrait.jpg" alt="Chris" style="width:100%">
         <h1>Christopher Lewis</h1>
         <p class="title">Computer Science, Economics</p>
-        <p>Your University</p>
+        <p>Tulane</p>
         <a href="#"><i class="fa fa-dribbble"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
